[fix] logo left alignment

--- a/source/sass/modules/organisms/_header.sass
+++ b/source/sass/modules/organisms/_header.sass
@@ -37,9 +37,10 @@
   display: flex
   flex-shrink: 0;
   margin: 0 70px 0 0
-  width: 65px
+  width: 50px
   height: 40px
   +mq($bp-lg)
+    width: 65px
     height: 44px
 
 
